--- a/WebApp/src/index.html
+++ b/WebApp/src/index.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Documentsystem</title>
   <base href="/">
